--- a/index.html
+++ b/index.html
@@ -19,6 +19,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!--Fixed Top-->
+    <div id="fixed-top" class="position-fixed w-100 shadow invisible" style="top: 0; z-index: 10;">
+        <div class="fixed-header">
+            <div>
+                <img src="./src/imgs/logo.webp" alt="">
+            </div>
+            <div>
+                <a href="./index.html" class="fs-6 fw-semibold" style="color: black;">Passeios</a>
+                <a href="" class="fs-6 fw-semibold ms-3" style="color: black;">Contato</a>
+            </div>
+            <div class="cart-button rounded-circle p-4 d-flex align-items-center justify-content-center"
+           style="border: solid 2px lightcoral; height: 2rem; width: 2rem;"
+           id="cart-btn">
+              <i class="bi bi-cart-fill"></i>
+          </div>
+        </div>
+    </div>
+
     <!--topper-->
     <nav class="topper d-flex justify-content-center align-items-center" style="height: 2rem; background-color: blanchedalmond;">
         <div class="d-flex flex-row justify-content-end container">
@@ -34,7 +52,7 @@
         </div>
     </nav>
 
-    <!--Logo-->
+    <!--Top-->
     <nav class="ps-4 pe-4 container">
         <div class="nav-logo d-flex flex-row align-items-center justify-content-between">
             <div class="h-100">
@@ -101,7 +119,9 @@
     id="cart-modal" >
         <div class="bg-white rounded p-5 modal-inner-cart">
             <h2 class="fs-5 fw-bold">Meu Carrinho</h2>
-            <div class="d-flex justify-content-between" id="cart-items"></div>
+            <div class="d-flex flex-column justify-content-between" id="cart-items">
+
+            </div>
             <p class="fw-bold">Total: <span id="cart-total">0.00</span></p>
             <div class="mt-5 d-flex flex-row justify-content-between w-100">   
                 <button id="close-modal-btn" class="rounded-pill p-2">Fechar</button>
