--- a/service.html
+++ b/service.html
@@ -34,7 +34,24 @@
       </div>
     </nav>
 
-    <!--Logo-->
+    <!--Fixed Header-->
+    <div id="fixed-top" class="position-fixed w-100 shadow invisible" style="top: 0; z-index: 10;">
+        <div class="fixed-header">
+            <div>
+                <img src="./src/imgs/logo.webp" alt="">
+            </div>
+            <div>
+                <a href="./index.html" class="fs-6 fw-semibold" style="color: black;">Passeios</a>
+                <a href="" class="fs-6 fw-semibold ms-3" style="color: black;">Contato</a>
+            </div>
+            <div class="cart-button rounded-circle p-4 d-flex align-items-center justify-content-center"
+           style="border: solid 2px lightcoral; height: 2rem; width: 2rem;">
+              <i class="bi bi-cart-fill"></i>
+          </div>
+        </div>
+    </div>
+
+    <!--Nav Top-->
     <nav class="ps-4 pe-4 container">
       <div class="nav-logo d-flex flex-row align-items-center justify-content-between">
           <div class="h-100">
@@ -58,6 +75,7 @@
       </div>
     </nav>
 
+    <!--Main Container-->
     <div class="container-xxl ps-5 pe-5 mt-4 mb-4">
         <div class="row">
             <!-- Left Container-->
@@ -110,7 +128,7 @@
 
             <!-- Price Info -->
             <div id="right-container" class="col">
-                <div class="card" style="border-radius: 10px;">
+                <div id="priceCard" class="card" style="border-radius: 10px; top: 0px;">
                     <div class="card-header d-flex flex-column">
                         <span>Pré-Reserva</span>
                         <span class="fs-2 fw-bold" id="preBooking-value">R$30,00</span>
@@ -151,11 +169,31 @@
                             </div>
                         </div>
                     </div>
+                    <div class="d-flex justify-content-center w-100 p-3">
+                        <button id="reserve-button" class="backg-secondary w-100 rounded fs-5 fw-bold text-light">Adicionar ao carrinho</button>
+                    </div>
                     <div class="card-footer">
                         <span id="subtotal" class="fs-3 fw-bold price-text">Subtotal: R$0,00</span>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <!--Cart Modal-->
+    <div class="w-100 h-100 top-0 left-0 align-items-center justify-content-center position-fixed modal-cart"
+    style="display: none;"
+    id="cart-modal" >
+        <div class="bg-white rounded p-5 modal-inner-cart">
+            <h2 class="fs-4 fw-bold">Meu Carrinho</h2>
+            <div class="d-flex flex-column justify-content-between" id="cart-items">
+                
+            </div>
+            <p class="fw-bold">Total: <span id="cart-total">0.00</span></p>
+            <div class="mt-5 d-flex flex-row justify-content-between w-100">   
+                <button id="close-modal-btn" class="rounded-pill p-2">Fechar</button>
+                <button id="check-out-btn" class="bg-success rounded-pill p-2">Finalizar Pedido</button>
+            </div> 
         </div>
     </div>
 
