--- a/service.html
+++ b/service.html
@@ -38,7 +38,7 @@
     <div id="fixed-top" class="position-fixed w-100 shadow invisible" style="top: 0; z-index: 10;">
         <div class="fixed-header">
             <div>
-                <img src="./src/imgs/logo.webp" alt="">
+                <img src="./src/imgs/logo.jpg" alt="">
             </div>
             <div>
                 <a href="./index.html" class="fs-6 fw-semibold" style="color: black;">Passeios</a>
@@ -56,7 +56,7 @@
       <div class="nav-logo d-flex flex-row align-items-center justify-content-between">
           <div class="h-100">
               <a src="" alt="">
-                  <img class="h-100" src="./src/imgs/logo.webp" alt="logo">
+                  <img class="h-100" src="./src/imgs/logo.jpg" alt="logo">
               </a>
           </div>
           <div class="cart-button rounded-circle p-4 d-flex align-items-center justify-content-center"
