--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@
                 <img src="./src/imgs/index_carousel/espelho.jpg" class="w-100">
                 <div class="carousel-caption top-0 mt-3 text-start" style="max-width: 30rem;">
                     <h1 class="fw-bolder">Os Melhores Passeios Em Porto Seguro!</h1>
-                    <button class="btn rounded-pill mt-3" style="background-color: lightcoral; color: white;">Saiba Mais</button>
+                    <button class="btn rounded-pill mt-3" style="background-color: lightseagreen; color: white;">Saiba Mais</button>
                 </div>
             </div>
             <div class="carousel-item">
                 <img src="./src/imgs/index_carousel/quadri.jpg" class="w-100">
                 <div class="carousel-caption top-0 mt-3 text-start" style="max-width: 30rem;">
                     <h1 class="fw-bolder">Os Melhores Passeios Em Porto Seguro!</h1>
-                    <button class="btn rounded-pill mt-3" style="background-color: lightcoral; color: white;">Saiba Mais</button>
+                    <button class="btn rounded-pill mt-3" style="background-color: lightseagreen; color: white;">Saiba Mais</button>
                 </div>
             </div>
 
@@ -120,7 +120,7 @@
         <div class="bg-white rounded p-5 modal-inner-cart">
             <h2 class="fs-5 fw-bold">Meu Carrinho</h2>
             <div class="d-flex flex-column justify-content-between" id="cart-items">
-
+                
             </div>
             <p class="fw-bold">Total: <span id="cart-total">0.00</span></p>
             <div class="mt-5 d-flex flex-row justify-content-between w-100">   
@@ -143,7 +143,7 @@
     </div>
 
 
-    <footer style="height: 10rem; background-color: blanchedalmond;">
+    <footer style="height: 2rem; background-color: blanchedalmond;">
     </footer>
     
     <script src="./src/scripts/main.js"></script>
