--- a/index.html
+++ b/index.html
@@ -44,11 +44,15 @@
                 <i class="bi bi-envelope"></i>
                 <span>maria@gmail.com |</span>
             </div>
-            <div class="ms-1">
-                <i class="bi bi-whatsapp"></i>
-                <span>73 9888-8888 |</span>
-            </div>
-            <i class="bi bi-instagram ms-1"></i>
+            <a href="https://wa.me/7399528587">
+                <div class="ms-1">
+                    <i class="bi bi-whatsapp"></i>
+                    <span>73 99528-8587 |</span>
+                </div>
+            </a>
+            <a href="https://www.instagram.com/porto.explore/">
+                <i class="bi bi-instagram ms-1"></i>
+            </a>
         </div>
     </nav>
 
@@ -137,10 +141,13 @@
             </div>
     </div>
 
-    <div class="floating-container">
-        <i class="bi bi-whatsapp"></i>
-        <div class="floating-button ms-2">Whatsapp</div>
-    </div>
+    <!-- Wathsapp Floating button-->
+     <a href="https://wa.me/7399528587">
+        <div class="floating-container">
+            <i class="bi bi-whatsapp"></i>
+            <div class="floating-button ms-2">Whatsapp</div>
+        </div>
+    </a>
 
 
     <footer style="height: 2rem; background-color: blanchedalmond;">
