--- a/service.html
+++ b/service.html
@@ -19,19 +19,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-<!-- Topper -->
+    <!-- Topper -->
     <nav class="topper d-flex justify-content-center align-items-center" style="height: 2rem; background-color: blanchedalmond;">
-      <div class="d-flex flex-row justify-content-end container">
-          <div>
-              <i class="bi bi-envelope"></i>
-              <span>maria@gmail.com |</span>
-          </div>
-          <div class="ms-1">
-              <i class="bi bi-whatsapp"></i>
-              <span>73 9888-8888 |</span>
-          </div>
-          <i class="bi bi-instagram ms-1"></i>
-      </div>
+    <div class="d-flex flex-row justify-content-end container">
+        <div>
+            <i class="bi bi-envelope"></i>
+            <span>maria@gmail.com |</span>
+        </div>
+        <a href="https://wa.me/7399528587">
+            <div class="ms-1">
+                <i class="bi bi-whatsapp"></i>
+                <span>73 99528-8587 |</span>
+            </div>
+        </a>
+        <a href="https://www.instagram.com/porto.explore/">
+            <i class="bi bi-instagram ms-1"></i>
+        </a>
+    </div>
     </nav>
 
     <!--Fixed Header-->
