--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vitrine</title>
 
     <!--Styles-->
     <link rel="stylesheet" href="./src/styles/main.css">
@@ -29,8 +29,7 @@
                 <a href="./index.html" class="fs-6 fw-semibold" style="color: black;">Passeios</a>
                 <a href="" class="fs-6 fw-semibold ms-3" style="color: black;">Contato</a>
             </div>
-            <div class="cart-button rounded-circle p-4 d-flex align-items-center justify-content-center"
-           style="border: solid 2px lightcoral; height: 2rem; width: 2rem;"
+            <div class="open-cart-button p-4"
            id="cart-btn">
               <i class="bi bi-cart-fill"></i>
           </div>
@@ -64,8 +63,7 @@
                     <img class="h-100" src="./src/imgs/logo.jpg" alt="logo">
                 </a>
             </div>
-            <div class="cart-button rounded-circle p-4 d-flex align-items-center justify-content-center"
-             style="border: solid 2px lightcoral; height: 2rem; width: 2rem;"
+            <div class="open-cart-button p-4"
              id="cart-btn">
                 <i class="bi bi-cart-fill"></i>
             </div>
@@ -87,17 +85,19 @@
 
         <div class="carousel-inner">    
             <div class="carousel-item active">
-                <img src="./src/imgs/index_carousel/espelho.jpg" class="w-100">
+                <img src="./src/imgs/index_carousel/espelho_carousel_A.jpg" class="w-100">
                 <div class="carousel-caption top-0 mt-3 text-start" style="max-width: 30rem;">
-                    <h1 class="fw-bolder">Os Melhores Passeios Em Porto Seguro!</h1>
-                    <button class="btn rounded-pill mt-3" style="background-color: lightseagreen; color: white;">Saiba Mais</button>
+                    <h1 class="fw-bolder">Se encante com a praia do espelho</h1>
+                    <a class="know-more-button btn rounded-pill mt-3" style="background-color: lightseagreen; color: white;"
+                    href="./service.html?service=0"
+                    >Saiba Mais</a>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./src/imgs/index_carousel/quadri.jpg" class="w-100">
+                <img src="./src/imgs/index_carousel/recife.jpg" class="w-100">
                 <div class="carousel-caption top-0 mt-3 text-start" style="max-width: 30rem;">
                     <h1 class="fw-bolder">Os Melhores Passeios Em Porto Seguro!</h1>
-                    <button class="btn rounded-pill mt-3" style="background-color: lightseagreen; color: white;">Saiba Mais</button>
+                    <a id="show-tuors-btn" class="know-more-button btn rounded-pill mt-3" style="background-color: lightseagreen; color: white;">Saiba Mais</a>
                 </div>
             </div>
 
