--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vitrine</title>
+    <title>Porto Explore</title>
 
     <!--Styles-->
     <link rel="stylesheet" href="./src/styles/main.css">
@@ -27,10 +27,9 @@
             </div>
             <div>
                 <a href="./index.html" class="fs-6 fw-semibold" style="color: black;">Passeios</a>
-                <a href="" class="fs-6 fw-semibold ms-3" style="color: black;">Contato</a>
+                <a href="https://wa.me/7399528587" class="fs-6 fw-semibold ms-3" style="color: black;">Contato</a>
             </div>
-            <div class="open-cart-button p-4"
-           id="cart-btn">
+            <div class="open-cart-button p-4">
               <i class="bi bi-cart-fill"></i>
           </div>
         </div>
@@ -83,7 +82,7 @@
     id="carousel"
     data-bs-ride="">
 
-        <div class="carousel-inner">    
+        <div class="carousel-inner overflow-visible">    
             <div class="carousel-item active">
                 <img src="./src/imgs/index_carousel/espelho_carousel_A.jpg" class="w-100">
                 <div class="carousel-caption top-0 mt-3 text-start" style="max-width: 30rem;">
@@ -95,9 +94,9 @@
             </div>
             <div class="carousel-item">
                 <img src="./src/imgs/index_carousel/recife.jpg" class="w-100">
-                <div class="carousel-caption top-0 mt-3 text-start" style="max-width: 30rem;">
+                <div class="carousel-caption top-0 text-start" style="max-width: 30rem;">
                     <h1 class="fw-bolder">Os Melhores Passeios Em Porto Seguro!</h1>
-                    <a id="show-tuors-btn" class="know-more-button btn rounded-pill mt-3" style="background-color: lightseagreen; color: white;">Saiba Mais</a>
+                    <a id="show-tuors-btn" class="know-more-button btn rounded-pill mt-2" style="background-color: lightseagreen; color: white;">Saiba Mais</a>
                 </div>
             </div>
 
