--- a/service.html
+++ b/service.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Passeio</title>
+    <link rel="icon" type="image/x-icon" href="./src/imgs/favicon.png">
 
     <!--Styles-->
     <link rel="stylesheet" href="./src/styles/service.css">
@@ -46,7 +47,7 @@
             </div>
             <div>
                 <a href="./index.html" class="fs-6 fw-semibold" style="color: black;">Passeios</a>
-                <a href="" class="fs-6 fw-semibold ms-3" style="color: black;">Contato</a>
+                <a href="https://wa.me/7399528587" class="fs-6 fw-semibold ms-3" style="color: black;">Contato</a>
             </div>
             <div class="cart-button rounded-circle p-4 d-flex align-items-center justify-content-center"
            style="border: solid 2px lightseagreen; height: 2rem; width: 2rem;">
@@ -72,7 +73,7 @@
       <div class="d-flex flex-row justify-content-between" style="height: 40px">
           <div>
               <a href="./index.html" class="fs-6 fw-semibold" style="color: black;">Passeios</a>
-              <a href="" class="fs-6 fw-semibold ms-3" style="color: black;">Contato</a>
+              <a href="https://wa.me/7399528587" class="fs-6 fw-semibold ms-3" style="color: black;">Contato</a>
           </div>
           
           <a href="./index.html" class="fw-semibold" style="color: black;">IR PARA O SITE</a>
