--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Porto Explore</title>
+    <link rel="icon" type="image/x-icon" href="./src/imgs/favicon.png">
 
     <!--Styles-->
     <link rel="stylesheet" href="./src/styles/main.css">
@@ -38,10 +39,12 @@
     <!--topper-->
     <nav class="topper d-flex justify-content-center align-items-center" style="height: 2rem; background-color: blanchedalmond;">
         <div class="d-flex flex-row justify-content-end container">
-            <div>
-                <i class="bi bi-envelope"></i>
-                <span>maria@gmail.com |</span>
-            </div>
+            <a href="mailto:Porto.explore.ps@gmail.com">
+                <div>
+                    <i class="bi bi-envelope"></i>
+                    <span>PortoExplore |</span>
+                </div>
+            </a>
             <a href="https://wa.me/7399528587">
                 <div class="ms-1">
                     <i class="bi bi-whatsapp"></i>
@@ -70,7 +73,7 @@
         <div class="d-flex flex-row justify-content-between" style="height: 40px">
             <div>
                 <a href="" class="fs-6 fw-semibold" style="color: black;">Passeios</a>
-                <a href="" class="fs-6 fw-semibold ms-3" style="color: black;">Contato</a>
+                <a href="https://wa.me/7399528587" class="fs-6 fw-semibold ms-3" style="color: black;">Contato</a>
             </div>
             
             <a href="" class="fw-semibold" style="color: black;">IR PARA O SITE</a>
