--- a/tree.html
+++ b/tree.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guide</title>
+    <link rel="icon" type="image/x-icon" href="./src/imgs/favicon.png">
 
     <!--Styles -->
     <link rel="stylesheet" href="./src/styles/reset.css">
