--- a/service.html
+++ b/service.html
@@ -23,10 +23,12 @@
     <!-- Topper -->
     <nav class="topper d-flex justify-content-center align-items-center" style="height: 2rem; background-color: blanchedalmond;">
     <div class="d-flex flex-row justify-content-end container">
-        <div>
-            <i class="bi bi-envelope"></i>
-            <span>maria@gmail.com |</span>
-        </div>
+        <a href="mailto:Porto.explore.ps@gmail.com">
+            <div>
+                <i class="bi bi-envelope"></i>
+                <span>PortoExplore |</span>
+            </div>
+        </a>
         <a href="https://wa.me/7399528587">
             <div class="ms-1">
                 <i class="bi bi-whatsapp"></i>
@@ -35,6 +37,7 @@
         </a>
         <a href="https://www.instagram.com/porto.explore/">
             <i class="bi bi-instagram ms-1"></i>
+            <span>@porto.explore</span>
         </a>
     </div>
     </nav>
@@ -46,7 +49,7 @@
                 <img src="./src/imgs/logo.jpg" alt="">
             </div>
             <div>
-                <a href="./index.html" class="fs-6 fw-semibold" style="color: black;">Passeios</a>
+                <a href="./home.html" class="fs-6 fw-semibold" style="color: black;">Passeios</a>
                 <a href="https://wa.me/7399528587" class="fs-6 fw-semibold ms-3" style="color: black;">Contato</a>
             </div>
             <div class="cart-button rounded-circle p-4 d-flex align-items-center justify-content-center"
@@ -72,11 +75,11 @@
       </div>
       <div class="d-flex flex-row justify-content-between" style="height: 40px">
           <div>
-              <a href="./index.html" class="fs-6 fw-semibold" style="color: black;">Passeios</a>
+              <a href="./home.html" class="fs-6 fw-semibold" style="color: black;">Passeios</a>
               <a href="https://wa.me/7399528587" class="fs-6 fw-semibold ms-3" style="color: black;">Contato</a>
           </div>
           
-          <a href="./index.html" class="fw-semibold" style="color: black;">IR PARA O SITE</a>
+          <a href="./home.html" class="fw-semibold" style="color: black;">IR PARA O SITE</a>
       </div>
     </nav>
 
