--- a/service.html
+++ b/service.html
@@ -22,7 +22,7 @@
 <body>
     <!-- Topper -->
     <nav class="topper d-flex justify-content-center align-items-center" style="height: 2rem; background-color: blanchedalmond;">
-    <div class="d-flex flex-row justify-content-end container">
+    <div class="d-flex flex-row justify-content-end container" style="font-size: small;">
         <a href="mailto:Porto.explore.ps@gmail.com">
             <div>
                 <i class="bi bi-envelope"></i>
